--- a/themes/phrck/layouts/partials/nav.html
+++ b/themes/phrck/layouts/partials/nav.html
@@ -1,8 +1,28 @@
-<nav >
-  <ul>
-    <li><a href="{{ .Site.BaseURL }}{{ .LanguagePrefix }}">~/{{.Site.Title }}{{ .LanguagePrefix }}</a>{{ if .IsHome }}{{ else if .IsNode }}<a href="{{ .Site.BaseURL }}{{ .LanguagePrefix }}/{{ lower .Title }}">/{{ lower .Title }}</a>{{ else if .IsPage }}<a href="{{ .Site.BaseURL }}{{ .LanguagePrefix }}/{{ .Section }}">/{{ .Section }}</a></li>
-  {{ end }}
-  {{ if .IsPage }}
-  
-  {{ end }}
+<nav>
+  <div class="menu">
+    <ul class="sidebar-menu">
+      {{ $currentPage := . }}
+      <li>
+        {{ range $index := .Site.Menus.lang}}
+          {{ .Pre }}
+          <a href="{{.URL}}">
+            <span>{{ .Name }}</span>
+          </a>
+        {{ end }}
+      </li>
+      {{ range .Site.Menus.main }}
+        <li>
+          <a href="{{.URL}}">
+            {{ .Pre }}
+            <span>{{ .Name }}</span>
+          </a>
+        </li>
+        {{end}}
+    </ul>
+  </div>
+  <div class="table-of-content">
+    {{ .TableOfContents }}
+  </div>
 </nav>
+
+
