--- a/themes/phrck/layouts/index.html
+++ b/themes/phrck/layouts/index.html
@@ -1,7 +1,5 @@
 {{ partial "head.html" . }}
 <section>
-  <div class="article-body">
-    {{ .Content }}
-  </div>
+{{ partial "body" . }}
 </section>
 {{ partial "foot" . }}
