--- a/themes/phrck/static/css/slides.css
+++ b/themes/phrck/static/css/slides.css
@@ -68,7 +68,7 @@ body {
   font-size: 2em; }
 
 .reveal h2 {
-  font-size: 2.11em; }
+  font-size: 1.5em; }
 
 .reveal h3 {
   font-size: 1.55em; }
@@ -152,7 +152,6 @@ body {
 .reveal pre {
   display: block;
   position: relative;
-  width: 90%;
   margin: 20px auto;
   text-align: left;
   font-size: 0.55em;
@@ -163,14 +162,18 @@ body {
 
 .reveal code {
   font-family: monospace;
-  text-transform: none; }
+  text-transform: none;
+  max-height: 100vh;
+}
 
 .reveal pre code {
   display: block;
   padding: 5px;
   overflow: auto;
-  max-height: 400px;
-  word-wrap: normal; }
+  word-wrap: normal;
+  overflow: auto;
+  max-height: 600px;
+}
 
 .reveal table {
   margin: auto;
