add params redirect

--- a/themes/phrck/layouts/partials/foot.html
+++ b/themes/phrck/layouts/partials/foot.html
@@ -1,4 +1,5 @@
 <footer id="footer">
+  <p>{{ .Site.Params.Redirect | markdownify }}<strong>{{ .RelPermalink }}</strong></p>
   {{ partial "nav" . }}
 </footer>
 </body>
