--- a/themes/phrck/layouts/_default/single.html
+++ b/themes/phrck/layouts/_default/single.html
@@ -1,10 +1,5 @@
 {{ partial "head" . }}
-<article>
-  <div class="article-header">
-    <h1>{{ .Title }}</h1>
-  </div>
-  <div class="article-body">
-    {{ .Content }}
-  </div>
-</article>
+<section>
+{{ partial "body" . }}
+</section>
 {{ partial "foot" . }}
