--- a/themes/phrck/layouts/partials/foot.html
+++ b/themes/phrck/layouts/partials/foot.html
@@ -1,4 +1,15 @@
 <footer id="footer">
+{{ if .IsPage }}
+  <time>
+    {{ with .Site.Params.DateForm }}
+    created: {{ $.Date.Format . }}
+    {{ else }}
+    created: {{ $.Date.Format "Jan 02 2006" }}
+    {{ end }}
+    | updated: {{ .Lastmod.Format "Jan 02 2006" }}
+  </time>
+  </aside>
+{{end}}
   <p>{{ .Site.Params.Redirect | markdownify }}<strong>{{ .RelPermalink }}</strong></p>
   {{ partial "nav" . }}
 </footer>
