--- a/themes/phrck/layouts/taxonomy/topic.html
+++ b/themes/phrck/layouts/taxonomy/topic.html
@@ -1,7 +1,7 @@
 {{ partial "head.html" . }}
 <section>
   {{ partial "body" . }}
-  {{ range .Data.Pages.GroupByDate "2006" }}
+  {{ range .Pages.GroupByDate "2006" }}
   <h1>{{ .Key }} --</h1>
   <ul>
     {{ range .Pages }}
