--- a/themes/phrck/layouts/partials/head.html
+++ b/themes/phrck/layouts/partials/head.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="{{ .Site.Params.Description }}"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
 
