--- a/themes/phrck/layouts/partials/foot.html
+++ b/themes/phrck/layouts/partials/foot.html
@@ -10,8 +10,8 @@
   </time>
   </aside>
 {{end}}
-  <div class="footer-redirect">{{ .Site.Params.Redirect | markdownify }}<strong>{{ .RelPermalink }}</strong></div>
-  {{ partial "nav" . }}
+<div class="footer-redirect">{{ .Site.Params.Redirect | markdownify }}<br /><strong>$ curl -L edouard.paris{{ .RelPermalink }}</strong></div>
+  <p>&copy; {{ .Site.Copyright }} Powered by <a href="http://gohugo.io" target="_blank">Hugo</a></p>
 </footer>
 </body>
 </html>
