--- a/themes/phrck/layouts/partials/foot.html
+++ b/themes/phrck/layouts/partials/foot.html
@@ -11,7 +11,7 @@
   </aside>
 {{end}}
 <div class="footer-redirect">{{ .Site.Params.Redirect | markdownify }}<br
-  /><strong>$ curl -L edouard.paris{{ .RelPermalink }}/index.txt</strong></div>
+  /><strong>$ curl -L edouard.paris{{ .RelPermalink }}index.txt</strong></div>
   <p>&copy; {{ .Site.Copyright }} Powered by <a href="http://gohugo.io" target="_blank">Hugo</a></p>
 </footer>
 </body>
