blog: seperate drafts

--- a/themes/phrck/layouts/partials/body.html
+++ b/themes/phrck/layouts/partials/body.html
@@ -1,6 +1,6 @@
 <div class="article-header">
   <a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}">~/{{.Site.Title }}{{.Site.LanguagePrefix }}</a>{{ if .IsHome }}{{ else if .IsNode }}<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ lower .Title }}">/{{ lower .Title }}</a>
-  {{ else if .IsPage }}<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ .Section }}">/{{ .Section }}</a><a>/{{ .File.TranslationBaseName }}</a>{{ end }}
+  {{ else if .IsPage }}<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ .Section }}">/{{ .Section }}</a><a>/{{ .Slug }}</a>{{ end }}
   {{ if .Params.toc }}{{.TableOfContents}}{{ end }}
 </div>
 <div class="article-body">
