--- a/themes/phrck/layouts/partials/foot.html
+++ b/themes/phrck/layouts/partials/foot.html
@@ -9,9 +9,13 @@
     | updated: {{ .Lastmod.Format "Jan 02 2006" }}
   </time>
   </aside>
+{{ end }}
+{{ range .OutputFormats }}
+{{ if eq .Name "txt" }}
+<div class="footer-redirect">{{ $.Site.Params.Redirect | markdownify }}<br
+  /><strong>$ curl -L edouard.paris{{ $.RelPermalink }}index.txt</strong></div>
 {{end}}
-<div class="footer-redirect">{{ .Site.Params.Redirect | markdownify }}<br
-  /><strong>$ curl -L edouard.paris{{ .RelPermalink }}index.txt</strong></div>
+{{end }}
   <p>&copy; {{ .Site.Copyright }} Powered by <a href="http://gohugo.io" target="_blank">Hugo</a></p>
 </footer>
 </body>
