--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -10,11 +10,9 @@
   </time>
   </aside>
 {{ end }}
-{{ range .OutputFormats }}
-{{ if eq .Name "txt" }}
+{{ if gt (where .OutputFormats "Name" "txt") 0 }}
 <div class="footer-redirect">{{ $.Site.Params.Redirect | markdownify }}<br
   /><strong>$ curl -L edouard.paris{{ $.RelPermalink }}index.txt</strong></div>
-{{end}}
 {{end }}
   <p>&copy; {{ .Site.Copyright }} Powered by <a href="http://gohugo.io" target="_blank">Hugo</a></p>
 </footer>
