--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,24 @@
-body {
+.default {
+  font-size: 10pt;
+  font-family: sans-sherif;
+  color: #1F2429;
+  background-color: #fff7f4;
+}
+
+.txt {
   font-size: 10pt;
   font-family: monospace;
   color: #1F2429;
   background-color: #fff;
+  display: block;
+  margin-top: 100px;
+  margin-bottom: 5%;
+  position: relative;
+  width: 70ch;
+  margin-left: 100px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.txt h1, h2, h3, h4, h5, h6 {
   font-size: 10pt;
   font-weight: bold;
 }
@@ -79,12 +92,7 @@ nav li {
 }
 
 section {
-  display: block;
-  margin-top: 100px;
-  margin-bottom: 5%;
-  position: relative;
-  width: 70ch;
-  margin-left: 100px;
+  
 }
 
 section li {
