Add less to curl command

--- a/themes/phrck/layouts/partials/head.html
+++ b/themes/phrck/layouts/partials/head.html
@@ -12,7 +12,8 @@
   <main>
   <aside style="padding-top: 100px;">
     <div class="sidenote">
-      {{ .Site.Params.Redirect | markdownify }}<br/><strong>$ curl -L edouard.paris{{ .RelPermalink }}index.txt</strong>
+      {{ .Site.Params.Redirect | markdownify }}<br/><strong>$ curl -L
+        edouard.paris{{ .RelPermalink }}index.txt | less</strong>
     </div>
   </aside>
 
