--- a/themes/phrck/static/css/main.css
+++ b/themes/phrck/static/css/main.css
@@ -115,7 +115,7 @@ section a {
     position: absolute;
     margin-left: calc(70ch + 6.5rem);
     margin-top: 0.2em;
-    width: inherit;
+    width: 100%;
   }
 }
 
