--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,8 @@ code {
 
 nav {
   display: block;
-  margin-top: 10px;
+  margin-top: 50px;
+  margin-left: -40px;
 }
 
 nav ul {
@@ -203,14 +204,9 @@ img {
 }
 
 hr {
-  border: none;
-  width: 9ch;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-hr::before {
-  content: "---------";
+  width: 100%;
+  border-top: 1px solid #ddd8dd;
+  border-bottom: 1px solid #fff;
 }
 
 .article-header ul {
