move footer copyright as sidenote

--- a/themes/phrck/layouts/partials/foot.html
+++ b/themes/phrck/layouts/partials/foot.html
@@ -10,7 +10,11 @@
   </time>
   </aside>
 {{end}}
-  <p>&copy; {{ .Site.Copyright }} Powered by <a href="http://gohugo.io" target="_blank">Hugo</a></p>
+<aside>
+  <div class="sidenote">
+    <p>&copy; {{ .Site.Copyright }} <br />Powered by <a href="http://gohugo.io" target="_blank">Hugo</a></p>
+  </div>
+</aside>
 </footer>
 </main>
 </body>
