--- a/themes/phrck/layouts/partials/head.html
+++ b/themes/phrck/layouts/partials/head.html
@@ -10,7 +10,7 @@
   </head>
   <body>
   <main>
-  <aside style="padding-top: 100px;">
+  <aside class="head-aside">
     <div class="sidenote">
       {{ .Site.Params.Redirect | markdownify }}<br/><strong>$ curl -L
         edouard.paris{{ .RelPermalink }}index.txt | less</strong>
