hack foot, add slugs

--- a/themes/phrck/layouts/partials/foot.html
+++ b/themes/phrck/layouts/partials/foot.html
@@ -1,9 +1,11 @@
 <aside>
   <div class="sidenote">
-    <p>&copy; {{ .Site.Copyright }} <br />Powered by <a href="http://gohugo.io" target="_blank">Hugo</a></p>
+    &copy; {{ .Site.Copyright }} <br />Powered by <a href="http://gohugo.io" target="_blank">Hugo</a>
   </div>
 </aside>
 <footer id="footer">
+    </br>
+    </br>
 </footer>
 </main>
 </body>
