--- a/themes/phrck/layouts/partials/head.html
+++ b/themes/phrck/layouts/partials/head.html
@@ -10,6 +10,10 @@
     </head>
     <body>
         <main>
+            <div class="article-header">
+                <a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}">~/{{.Site.Title }}{{.Site.LanguagePrefix }}</a>{{ if .IsHome }}{{ else if .IsNode }}<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ lower .Title }}">/{{ lower .Title }}</a>
+                {{ else if .IsPage }}<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}/{{ .Section }}">/{{ .Section }}</a><a>/{{ .Slug }}</a>{{ end }}
+            </div>
             <aside class="head-aside">
                 <div class="sidenote">
                     {{ if .IsPage }}
