--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ blockquote {
 
 code {
  font-size: 10pt;
- font-family: monospace;
+ font-family: 'DejaVu Sans Mono', monospace;
 }
 
 .highlight {
