--- a/themes/phrck/static/css/main.css
+++ b/themes/phrck/static/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: dejaVuSansMono;
-  src: url(/dejavu-fonts-ttf-2.37/ttf/DejaVuSansMono.ttf);
+  src: url(/fonts/dejavu-fonts-ttf-2.37/ttf/DejaVuSansMono.ttf);
 }
 
 html, body {
