--- a/themes/phrck/static/css/main.css
+++ b/themes/phrck/static/css/main.css
@@ -37,9 +37,7 @@ p {
 }
 
 blockquote {
-  text-align: right;
   font-style: italic;
-  font-size: 10pt;
 }
 
 code {
@@ -102,7 +100,7 @@ ol li:first-child {
   float: right;
 }
 
-p, ul, li, h1, h2, h3, h4, h5, h6 {
+.article-body>p, ul, li, h1, h2, h3, h4, h5, h6, blockquote {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
@@ -142,6 +140,11 @@ section a {
   max-width: calc(1440px/4);
 }
 
+.sidenote>blockquote {
+    margin: 0;
+    padding: 0;
+}
+
 .sidenote a {
   color: #067df7;
 }
@@ -178,13 +181,17 @@ article {
   line-height: 1.25em;
 }
 
-.article-body table>thead>tr>th {
-  border-bottom: 1px solid #1F2429;
-  font-weight: normal;
+.article-body table {
+    width: 100%;
 }
 
-.article-body table>tfoot>tr>th {
-  border-top: 1px dashed #1F2429;
+.article-body table>thead>tr>th {
+  font-weight: bold;
+  text-align: left;
+}
+
+.article-body tr, td, th {
+  border-bottom: 1px solid #ddd8dd;
 }
 
 .article-body table>thead>tr>th,
@@ -193,13 +200,8 @@ article {
 .article-body table>thead>tr>td,
 .article-body table>tbody>tr>td,
 .article-body table>tfoot>tr>td {
-  padding-left: 1ch;
-  padding-right: 1ch;
-  border-right: 1px dashed #1F2429;
-}
-
-.article-body table {
-  border-left: 1px dashed #1F2429;
+  padding: 4px;
+  margin: 0;
 }
 
 .list-item {
