--- a/themes/phrck/static/css/main.css
+++ b/themes/phrck/static/css/main.css
@@ -3,9 +3,20 @@
   src: url(/fonts/dejavu-fonts-ttf-2.37/ttf/DejaVuSansMono.ttf);
 }
 
+@font-face {
+    font-family: 'MonaspaceArgonVar';
+    src: url('/fonts/monaspace/MonaspaceArgonVarVF[wght,wdth,slnt].woff2') format('woff2'), /* Modern Browsers */
+         url('/fonts/monaspace/MonaspaceArgonVarVF[wght,wdth,slnt].woff') format('woff'); /* Older Browsers */
+}
+
+@font-face {
+    font-family: 'MonaspaceArgon';
+    src: url('/fonts/monaspace/MonaspaceArgon-Regular.woff') format('woff'); /* Older Browsers */
+}
+
 html, body {
   font-size: 10pt;
-  font-family: monospace;
+  font-family: 'MonaspaceArgonVar', 'MonaspaceArgon', monospace;
   color: #1F2429;
   background-color: #fff;
   height: 100%;
@@ -42,7 +53,7 @@ blockquote {
 
 code {
  font-size: 10pt;
- font-family: dejaVuSansMono, monospace;
+ font-family: 'dejaVuSansMono', monospace;
 }
 
 .highlight {
