--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,11 @@ hr {
         padding-right: 0;
     }
 
+    .article-body p, ul, li, h1, h2, h3, h4, h5, h6 {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
     .article-header {
         padding-left: 0;
         padding-right: 0;
