Use Fira Code font

--- a/themes/phrck/layouts/partials/head.html
+++ b/themes/phrck/layouts/partials/head.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta name="description" content="{{ .Site.Params.Description }}"/>
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <!-- HTML -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css">
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
     </head>
     <body>
